<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_dashboard"
        android:icon="@drawable/ic_home"
        android:title="@string/nav_dashboard" />
    <item
        android:id="@+id/nav_services"
        android:icon="@drawable/ic_grid"
        android:title="@string/nav_services" />
    <item
        android:id="@+id/nav_scholarship"
        android:icon="@drawable/ic_mortarboard"
        android:title="@string/nav_scholarship" />
    <item
        android:id="@+id/nav_requests"
        android:icon="@drawable/ic_history"
        android:title="@string/nav_requests" />
    <item
        android:id="@+id/nav_alerts"
        android:icon="@drawable/ic_bell"
        android:title="@string/nav_alerts" />
</menu>
